# precommit-per-file-flake8

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
flake8_per_file/: __init__.py
isort_per_file/: __init__.py
