[tool.poetry]
name = "flake8_per_file"
version = "0.5.1"
description = "Per file flake8"
authors = ["Gavin Carothers <gavin@carothers.name>"]
license = "Apache-2.0"
packages = [
    { include = "flake8_per_file" },
    { include = "isort_per_file" },
]

[tool.poetry.dependencies]
python = "^3.9.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
flake8-file = 'flake8_per_file:main'
isort-file = 'isort_per_file:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
